--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/Attachments/AppStimmerAttachmentsListView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/Attachments/AppStimmerAttachmentsListView.xaml
@@ -22,7 +22,7 @@
                         Padding="0"
                         CornerRadius="5">
                         <StackLayout BackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.AppStimmerAttachmentItemColor}">
-                            <attachments:TextAttachmentView>
+                            <!--<attachments:TextAttachmentView>
                                 <attachments:TextAttachmentView.IsVisible>
                                     <converter:MultiBinding Converter="{StaticResource AppStimmerAttachmentToViewEnabledConverter}" ConverterParameter="Text">
                                         <Binding Path="AttachmentType" />
@@ -56,7 +56,7 @@
                                         <Binding Path="IsMainAttachment" />
                                     </converter:MultiBinding>
                                 </attachments:AudioAttachmentView.IsVisible>
-                            </attachments:AudioAttachmentView>
+                            </attachments:AudioAttachmentView>-->
 
 
 
