--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/Attachments/AddAttachmentView.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/ContentViews/AppStimmerEditor/Attachments/AddAttachmentView.xaml
@@ -8,77 +8,75 @@
     xmlns:forms="clr-namespace:FFImageLoading.Svg.Forms;assembly=FFImageLoading.Svg.Forms"
     xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp">
     <ContentView.Content>
-        <ScrollView>
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="75" />
-                    <RowDefinition Height="75" />
-                    <RowDefinition Height="70" />
-                </Grid.RowDefinitions>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="75" />
+                <RowDefinition Height="75" />
+                <RowDefinition Height="70" />
+            </Grid.RowDefinitions>
 
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*" />
-                    <ColumnDefinition Width="1*" />
-                    <ColumnDefinition Width="1*" />
-                </Grid.ColumnDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="1*" />
+            </Grid.ColumnDefinitions>
 
-                <elements:AppStimmerAttachmentButton
-                    x:Name="AddPictureButton"
-                    Grid.Row="0"
-                    Grid.Column="0"
-                    AttachmentType="{x:Static enums:AttachmentType.Picture}"
-                    Description="Bild"
-                    IconSource="MSO.StimmApp.Resources.Icons.picture_circle.scale-100.png" />
-                <elements:AppStimmerAttachmentButton
-                    x:Name="AddVideoButton"
-                    Grid.Row="0"
-                    Grid.Column="1"
-                    AttachmentType="{x:Static enums:AttachmentType.Video}"
-                    Description="Video"
-                    IconSource="MSO.StimmApp.Resources.Icons.camera_circle.scale-100.png" />
-                <elements:AppStimmerAttachmentButton
+            <elements:AppStimmerAttachmentButton
+                x:Name="AddPictureButton"
+                Grid.Row="0"
+                Grid.Column="0"
+                AttachmentType="{x:Static enums:AttachmentType.Picture}"
+                Description="Bild"
+                IconSource="MSO.StimmApp.Resources.Icons.picture_circle.scale-100.png" />
+            <elements:AppStimmerAttachmentButton
+                x:Name="AddGalleryPictureButton"
+                Grid.Row="0"
+                Grid.Column="1"
+                AttachmentType="{x:Static enums:AttachmentType.GalleryPicture}"
+                Description="Bild (Galerie)"
+                IconSource="MSO.StimmApp.Resources.Icons.picture_circle.scale-100.png" />
+            <elements:AppStimmerAttachmentButton
+                x:Name="AddLocationButton"
+                Grid.Row="0"
+                Grid.Column="2"
+                AttachmentType="{x:Static enums:AttachmentType.Location}"
+                Description="Standort"
+                IconSource="MSO.StimmApp.Resources.Icons.location_circle.scale-100.png" />
+            <elements:AppStimmerAttachmentButton
+                x:Name="AddVideoButton"
+                Grid.Row="1"
+                Grid.Column="0"
+                AttachmentType="{x:Static enums:AttachmentType.Video}"
+                Description="Video"
+                IconSource="MSO.StimmApp.Resources.Icons.camera_circle.scale-100.png" />
+            <elements:AppStimmerAttachmentButton
+                x:Name="AddGalleryVideoButton"
+                Grid.Row="1"
+                Grid.Column="1"
+                AttachmentType="{x:Static enums:AttachmentType.GalleryVideo}"
+                Description="Video (Galerie)"
+                IconSource="MSO.StimmApp.Resources.Icons.gallery_circle.scale-100.png" />
+            <elements:AppStimmerAttachmentButton
+                x:Name="AddDocumentButton"
+                Grid.Row="1"
+                Grid.Column="2"
+                AttachmentType="{x:Static enums:AttachmentType.Document}"
+                Description="Dokument"
+                IconSource="MSO.StimmApp.Resources.Icons.document_circle.scale-100.png" />
+            <!--<elements:AppStimmerAttachmentButton
                     x:Name="AddAudioButton"
                     Grid.Row="0"
                     Grid.Column="2"
                     AttachmentType="{x:Static enums:AttachmentType.Audio}"
                     Description="Audio"
-                    IconSource="MSO.StimmApp.Resources.Icons.audio_circle.scale-100.png" />
-                <elements:AppStimmerAttachmentButton
+                    IconSource="MSO.StimmApp.Resources.Icons.audio_circle.scale-100.png" />-->
+            <!--<elements:AppStimmerAttachmentButton
                     x:Name="AddTextButton"
                     Grid.Row="1"
                     Grid.Column="0"
                     AttachmentType="{x:Static enums:AttachmentType.Text}"
                     Description="Text"
-                    IconSource="MSO.StimmApp.Resources.Icons.text_circle.scale-100.png" />
-                <elements:AppStimmerAttachmentButton
-                    x:Name="AddLocationButton"
-                    Grid.Row="1"
-                    Grid.Column="1"
-                    AttachmentType="{x:Static enums:AttachmentType.Location}"
-                    Description="Standort"
-                    IconSource="MSO.StimmApp.Resources.Icons.location_circle.scale-100.png" />
-                <elements:AppStimmerAttachmentButton
-                    x:Name="AddDocumentButton"
-                    Grid.Row="1"
-                    Grid.Column="2"
-                    AttachmentType="{x:Static enums:AttachmentType.Document}"
-                    Description="Dokument"
-                    IconSource="MSO.StimmApp.Resources.Icons.document_circle.scale-100.png" />
-                <elements:AppStimmerAttachmentButton
-                    x:Name="AddGalleryPictureButton"
-                    Grid.Row="2"
-                    Grid.Column="0"
-                    AttachmentType="{x:Static enums:AttachmentType.GalleryPicture}"
-                    Description="Bild (Galerie)"
-                    IconSource="MSO.StimmApp.Resources.Icons.picture_circle.scale-100.png" />
-                <elements:AppStimmerAttachmentButton
-                    x:Name="AddGalleryVideoButton"
-                    Grid.Row="2"
-                    Grid.Column="1"
-                    AttachmentType="{x:Static enums:AttachmentType.GalleryVideo}"
-                    Description="Video (Galerie)"
-                    IconSource="MSO.StimmApp.Resources.Icons.gallery_circle.scale-100.png" />
-            </Grid>
-        </ScrollView>
+                    IconSource="MSO.StimmApp.Resources.Icons.text_circle.scale-100.png" />-->
+        </Grid>
     </ContentView.Content>
 </ContentView>
