--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/ShowVideoAttachmentPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/ShowVideoAttachmentPage.xaml
@@ -9,36 +9,59 @@
     BackgroundColor="Black"
     HasSystemPadding="False">
 
-    <Grid x:Name="VideoPlayerGrid">
+    <Grid x:Name="MainGrid">
         <Grid.GestureRecognizers>
             <TapGestureRecognizer Command="{Binding TogglePlaybackCommand}" />
         </Grid.GestureRecognizers>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="40*" />
-            <RowDefinition Height="30*" />
-            <RowDefinition Height="40*" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
+
+        <Grid
+            x:Name="TopBarGrid"
+            Grid.Row="0"
+            RowSpacing="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+        </Grid>
 
         <forms:VideoView
             x:Name="VideoView"
-            AspectMode="AspectFill"
+            Grid.Row="1"
             HorizontalOptions="FillAndExpand"
             Source="{}"
-            VerticalOptions="FillAndExpand" />
+            VerticalOptions="FillAndExpand">
+            <forms:VideoView.GestureRecognizers>
+                <TapGestureRecognizer Tapped="VideoView_OnTapped" />
+            </forms:VideoView.GestureRecognizers>
+        </forms:VideoView>
 
-        <Grid
-            Grid.Row="2"
-            Margin="0,0,0,50"
-            HeightRequest="50"
-            VerticalOptions="End">
-            <Grid>
+        <StackLayout
+            x:Name="ControlsStackLayout"
+            Grid.Row="1"
+            Spacing="0"
+            VerticalOptions="EndAndExpand">
+            <Label
+                x:Name="DescriptionLabel"
+                BackgroundColor="#55000000"
+                FontSize="15"
+                HeightRequest="50"
+                HorizontalTextAlignment="Center"
+                Text="{Binding Attachment.Description}"
+                TextColor="White"
+                VerticalTextAlignment="Center" />
+
+            <Grid BackgroundColor="#55000000" HeightRequest="50">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="50" />
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="50" />
-
                 </Grid.ColumnDefinitions>
+
                 <Label
                     Grid.Column="0"
                     Margin="5,0,0,0"
@@ -58,10 +81,15 @@
                     TextColor="White"
                     VerticalOptions="Center" />
             </Grid>
-            <StackLayout HorizontalOptions="CenterAndExpand" Orientation="Horizontal" />
-            <!--<ProgressBar
-                x:Name="ProgressBar"
-                VerticalOptions="End" />-->
+        </StackLayout>
+
+        <Grid
+            x:Name="BottomBarGrid"
+            Grid.Row="0"
+            RowSpacing="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
         </Grid>
     </Grid>
 
