--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/App.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/App.xaml
@@ -56,6 +56,7 @@
             <converter:AppStimmerAttachmentsToMediaAttachmentsConverter x:Key="AppStimmerAttachmentsToMediaAttachmentsConverter" />
             <converter:StringToPlaceholderConverter x:Key="StringToPlaceholderConverter" />
             <converter:ColorToDarkerColorConverter x:Key="ColorToDarkerColorConverter" />
+            <converter:AppStimmerToNavigationBarEditPenVisibilityConverter x:Key="AppStimmerToNavigationBarEditPenVisibilityConverter" />
             <converter:AppStimmerAttachmentsToMediaAddachmentCountConverter x:Key="AppStimmerAttachmentsToMediaAddachmentCountConverter" />
             <converter:AppStimmerMainPictureAvailabilityToVisibilityConverter x:Key="AppStimmerMainPictureAvailabilityToVisibilityConverter" />
         </ResourceDictionary>
