--- a/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AppStimmersPage.xaml
+++ b/src/MSO.AppStimmer/MSO.AppStimmer/MSO.AppStimmer/Views/Pages/AppStimmersPage.xaml
@@ -5,9 +5,86 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:appStimmers="clr-namespace:MSO.StimmApp.Views.ContentViews.AppStimmers;assembly=MSO.StimmApp"
     xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp"
-    BindingContext="{Binding AppStimmers, Source={StaticResource Locator}}"
-    BackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.SecondaryColor}">
+    BackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.SecondaryColor}"
+    BindingContext="{Binding AppStimmers, Source={StaticResource Locator}}">
     <ContentPage.Content>
-        <appStimmers:AppStimmersListView />
+        <Grid>
+            <StackLayout>
+                <SearchBar 
+                    
+                    HeightRequest="50" 
+                    Placeholder="Search here to filter" 
+                    x:Name="SearchBar"
+                    TextChanged="SearchBar_OnTextChanged"/>
+
+                <xForms:SfListView
+                    x:Class="MSO.StimmApp.Views.ContentViews.AppStimmers.AppStimmersListView"
+                    xmlns="http://xamarin.com/schemas/2014/forms"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                    xmlns:elements="clr-namespace:MSO.StimmApp.Elements;assembly=MSO.StimmApp"
+                    xmlns:stimmApp="clr-namespace:MSO.StimmApp;assembly=MSO.StimmApp"
+                    xmlns:xForms="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms"
+                    xmlns:xfShapeView="clr-namespace:XFShapeView;assembly=XFShapeView"
+                    x:Name="ListView"
+                    BackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.SecondaryColor}"
+                    BindingContext="{Binding AppStimmers, Source={StaticResource Locator}}"
+                    ItemSize="250"
+                    ItemTapped="AppStimmersListView_OnItemTapped"
+                    ItemsSource="{Binding AppStimmers}">
+
+                    <xForms:SfListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <ViewCell.View>
+                                    <Frame
+                                        Margin="14,14,14,14"
+                                        Padding="0"
+                                        CornerRadius="8"
+                                        OutlineColor="Black">
+
+
+                                        <StackLayout
+                                            BackgroundColor="{Binding Source={x:Static stimmApp:App.Settings}, Path=AppColors.AppStimmersItemColor}"
+                                            HeightRequest="250"
+                                            Orientation="Vertical"
+                                            Spacing="0"
+                                            VerticalOptions="FillAndExpand">
+                                            <SearchBar Placeholder="Search here to filter" />
+                                            <Grid>
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition Height="*" />
+                                                    <RowDefinition Height="50" />
+                                                </Grid.RowDefinitions>
+                                                <Image
+                                                    Grid.Row="0"
+                                                    Grid.RowSpan="2"
+                                                    Aspect="AspectFill"
+                                                    HeightRequest="250"
+                                                    HorizontalOptions="Fill"
+                                                    Source="{Binding Picture, Converter={StaticResource ImageSourceToImageConverter}}"
+                                                    VerticalOptions="Fill" />
+                                                <elements:GradientFrame
+                                                    Grid.Row="1"
+                                                    Padding="0"
+                                                    EndColor="#AA000000"
+                                                    OutlineColor="Transparent"
+                                                    StartColor="#00000000">
+                                                    <Label
+                                                        Margin="12,12,0,12"
+                                                        FontSize="20"
+                                                        Text="{Binding Title}"
+                                                        TextColor="White" />
+                                                </elements:GradientFrame>
+                                            </Grid>
+                                        </StackLayout>
+                                    </Frame>
+                                </ViewCell.View>
+                            </ViewCell>
+                        </DataTemplate>
+                    </xForms:SfListView.ItemTemplate>
+                </xForms:SfListView>
+            </StackLayout>
+        </Grid>
+
     </ContentPage.Content>
 </ContentPage>
